# FingerJetFXOSE

./: .gitignore  .gitmodules  Android.mk  Application.mk  COPYRIGHT.txt  Makefile  README.txt
FingerJetFXOSE/: CMakeLists.txt  README.txt  compiler.cmake  runCMake.ps1  runCMake.sh
FingerJetFXOSE/cmake/: colors.cmake  compiler.cmake  cxxtestgen.cmake  folders.cmake  target.cmake  version.cmake
FingerJetFXOSE/libFJFX/include/: FJFX.h
FingerJetFXOSE/libFJFX/samples/fjfxSample/: CMakeLists.txt  Makefile  fjfxSample.c
FingerJetFXOSE/libFJFX/samples/images-pgm/: a001_05p.pgm  a001_07p.pgm  a999_01p.pgm  b001_06p.pgm  b001_08p.pgm
FingerJetFXOSE/libFJFX/samples/templates-iso/: a004_05p.ist  b001_08p.ist
FingerJetFXOSE/libFJFX/src/: CMakeLists.txt  FJFX.cpp
FingerJetFXOSE/libFRFXLL/include/: FRFXLL.h  FRFXLL_Results.h
FingerJetFXOSE/libFRFXLL/samples/FRFXLLSample/: CMakeLists.txt  README.txt  TestFeatures.c  TestRawImage.c  frfxllLSample.c  testAnsiImage.c  testAnsiImage.h  testRawImage.c
FingerJetFXOSE/libFRFXLL/samples/frfxllSample/: CMakeLists.txt  frfxllLSample.c  testFeatures.h
FingerJetFXOSE/libFRFXLL/src/: CMakeLists.txt
FingerJetFXOSE/libFRFXLL/src/algorithm/: FeatureExtraction.h  FingerImageRecord.h  assignment.h  delay.h  deserializeFpData.h  dpError.h  dpTypes.h  fixed_allocator.h  imresize.h  intmath.h  matchData.h  orimap.h  serializeFpData.h  settings.h  version.h
FingerJetFXOSE/libFRFXLL/src/lib/: CreateFtrSet.h  FRFXLLCreateContext.cpp  FRFXLLCreateFeatureSetFromRaw.cpp  FRFXLLCreateFeatureSetInPlace.cpp  FRFXLLCreateFeatureSetInPlaceFromRaw.cpp  FRFXLLCreateLibraryContext.cpp  FRFXLLDuplicateHandle.cpp  FRFXLLExport.cpp  FRFXLLGetLibraryVersion.cpp  FRFXLLGetMinutiae.cpp  FpDataObj.h  Object.h
FingerJetFXOSE/libFRFXLL/test/: cxxtestgen.cmake
FingerJetFXOSE/libFRFXLL/test/TestVectors/: CMakeLists.txt  README.txt  TestAnsiImage.h  TestAnsiImage200.c  TestAnsiImage250.c  TestAnsiImageBad1.c  TestAnsiImageBad3.c  TestFingerMinutiaRecords.c  ValueTraitsEx.h  dpResults.dbg  testRawImage.h
FingerJetFXOSE/libFRFXLL/test/testFRFXLL/: CMakeLists.txt  Makefile  dpfrCommonApiTests.h  dpfrFtrExInPlaceTests.h  dpfrFtrExTests.h  dpfrUnitTest.cpp  dpfrUnitTest.h  runner.cpp
FingerJetFXOSE/libFRFXLL/test/testFRFXLLInternals/: CMakeLists.txt  TestAssignment.h  TestFeatureExtraction.h  TestIntMath.h  TestMisc.h  TestTop_n.h  TestWriteFeatures.h  runner.cpp
FingerJetFXOSE/libMINEX/include/: minex.h
FingerJetFXOSE/libMINEX/src/: CMakeLists.txt  minex.cpp
FingerJetFXOSE/samples/images-pgm/: a001_06p.pgm  b001_04p.pgm
FingerJetFXOSE/samples/templates-iso/: a001_03p.ist  a001_06p.ist  b001_06p.ist
FingerJetFXOSE/src/: README.txt
FingerJetFXOSE/src/libFRFXLL/include/: FRFXLL.h
FingerJetFXOSE/src/libFRFXLL/samples/FRFXLLSample/: CMakeLists.txt
FingerJetFXOSE/src/libFRFXLL/src/: CMakeLists.txt
FingerJetFXOSE/src/libFRFXLL/src/algorithm/: README.txt  ScaleFactors.h  biffilt.h  fft_enhance.h  freeman.h  top_n.h  version.h
FingerJetFXOSE/src/libFRFXLL/src/libFRFXLL/: FRFXLLCreateFeatureSet.cpp  FRFXLLCreateFeatureSetInPlaceFromRaw.cpp
FingerJetFXOSE/src/libFRFXLL/test/TestVectors/: CMakeLists.txt  ConsoleErrorPrinter.h  TestAnsiImage10vf.c  TestAnsiImageAuthentec02.c  TestAnsiImageOneLine.c  TestAnsiImageUpekSwipe.c  TestFingerMinutiaRecords.h
FingerJetFXOSE/src/libFRFXLL/test/testFRFXLL/: CMakeLists.txt  dpfrCommonApiTests.h  dpfrFtrExTests.h
FingerJetFXOSE/src/libFRFXLL/test/testFRFXLLInternals/: CMakeLists.txt  Makefile  TestFixedAllocator.h  TestTop_n.h
FingerJetFXOSE/src/libfjfx/: Makefile  fjfx.cpp  fjfx.vers
include/: fjfx.h
samples/fjfxSample/: fjfxSample.c
samples/images-pgm/: a001_03p.pgm  a001_04p.pgm  a004_05p.pgm
samples/templates-iso/: a001_04p.ist  a001_05p.ist  a001_07p.ist  b001_04p.ist
src/: version.mak
src/ExternalDependencies/STL/STLport-5.2.1/: Makefile
src/ExternalDependencies/STL/STLport-5.2.1/src/c_locale_glibc/: c_locale_glibc2.c
src/ExternalDependencies/STL/STLport-5.2.1/stlport/stl/: _stdexcept_base.c
src/ExternalDependencies/STL/STLport-5.2.1/test/unit/cppunit/: test_main.cpp
src/ExternalDependencies/UnitTestFrameworks/cxxtest-3.10.1-dpbranch/: cxxtestgen.pl
src/ExternalDependencies/UnitTestFrameworks/cxxtest-3.10.1-dpbranch/cxxtest/: ErrorFormatter.h  ErrorPrinter.h  TestSuite.h  TestSuiteEx.h  Win32Gui.h
src/ExternalDependencies/UnitTestFrameworks/cxxtest-3.10.1-dpbranch/sample/mock/: Makefile
src/ExternalDependencies/UnitTestFrameworks/cxxtest-3.10.1-dpbranch/sample/msvc/: Makefile
src/libFRFXLL/: Android.mk  Makefile
src/libFRFXLL/samples/FRFXLLSample/: FRFXLLSample.c  Makefile  TestAnsiImage.c
src/libFRFXLL/src/algorithm/: FeatureExtraction.h  FingerImageRecord.h  IncludeFirst.h  block_fft.h  complex.h  conv2.h  delay.h  deserializeFpData.h  diagnostics.h  dpfr.h  extract_minutia.h  fft_enhance.h  imresize.h  integer_limits.h  intmath.h  matchData.h  member_comp.h  orimap.h  serializeFpData.h  static_assert.h
src/libFRFXLL/src/include/: README.txt
src/libFRFXLL/src/include/stl/: _cmath.h  _cstdlib.h  _range_errors.h
src/libFRFXLL/src/include/stl/config/: _epilog.h  _system.h  stl_armcc.h  user_config.h
src/libFRFXLL/src/libFRFXLL/: Android.mk  CreateFtrSet.h  FRFXLLCreateContext.cpp  FRFXLLCreateFeatureSetFromRaw.cpp  FRFXLLCreateLibraryContext.cpp  FRFXLLDuplicateHandle.cpp  FpDataObj.h  Makefile  Object.h  README.txt
src/libFRFXLL/test/TestVectors/: ConsoleErrorPrinter.h  ConsoleRunner.tpl  Makefile  TestAnsiImage.c  TestAnsiImage1000.c  TestAnsiImage300.c  TestAnsiImageAuthentec01.c  TestAnsiImageBad0.c  TestAnsiImageBad2.c  TestAnsiImageBrcm00.c  TestAnsiImageMartini.c  TestAnsiImageMartiniCE.c  TestAnsiImageValidity.c  TestAnsiImage_100_100.c  TestIsoImage.c  ValueTraitsEx.h
src/libFRFXLL/test/testFRFXLL/: README.txt  dpfrFtrExInPlaceTests.h  dpfrFtrExTests.h  dpfrUnitTest.h
src/libFRFXLL/test/testFRFXLLInternals/: TestAssignment.h  TestDelay.h  TestFeatureExtraction.h  TestMax2d5.h  TestMisc.h  TestWriteFeatures.h  lfsr.h
src/libfjfx/: Android.mk  README.txt
